# gaussdb-django

./: .gitignore  README.md  django_test_apps.txt  django_test_suite.sh  gaussdb_settings.py  install_gaussdb_driver.sh  manage.py  pyproject.toml  run_testing_worker.py  tidb_settings.py  tox.ini
.github/workflows/: tox-ci.yml
example/: wagtail_README.md
gaussdb_django/: __init__.py  base.py  compiler.py  creation.py  expressions.py  features.py  gaussdb_any.py  introspection.py  operations.py  schema.py
gaussdb_django/fields/: __init__.py  json.py
requirements/: gaussdb.txt
